--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <p><a href="/example/geoserver_wms2.html">Geoserver WMS Source ImageLayer</a></p>
         <p><a href="/example/tdt_xyz.html">Tianditu XYZ Source </a></p>
         <p><a href="/example/tdt_wmts.html">Tianditu WMTS Source </a></p>
+        <p><a href="/example/heatmap.html">Heatmap </a></p>
     </div>
 </body>
 
